fix: Corregido enrutamiento de Vercel para la API de Flask

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,12 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/upload",
       "dest": "backend/app.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "frontend/dist/$1"
     }
   ]
 }
