fix: Corregido enrutamiento de Vercel para la API de Flask

--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,20 @@
     {
       "src": "backend/app.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "frontend/index.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/upload",
       "dest": "backend/app.py"
+    },
+    {
+      "src": "/",
+      "dest": "frontend/dist/index.html"
     },
     {
       "src": "/(.*)",
