fix: Final fix de enrutamiento para index.html y assets estaticos (404)

--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,27 @@
     {
       "src": "backend/app.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/api/upload",
       "dest": "backend/app.py"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/frontend/assets/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "$1"
+      "dest": "/frontend/$1"
     }
   ]
 }
