--- a/vercel.json
+++ b/vercel.json
@@ -19,12 +19,16 @@
       "dest": "backend/app.py"
     },
     {
+      "src": "/",
+      "dest": "/frontend/dist/index.html"
+    },
+    {
       "src": "/assets/(.*)",
-      "dest": "/frontend/assets/$1"
+      "dest": "/frontend/dist/assets/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "dest": "/frontend/dist/$1"
     }
   ]
 }
