--- a/vercel.json
+++ b/vercel.json
@@ -19,16 +19,16 @@
       "dest": "/backend/app.py"
     },
     {
-      "src": "/",
-      "dest": "/frontend/dist/index.html"
-    },
-    {
       "src": "/assets/(.*)",
       "dest": "/frontend/dist/assets/$1"
     },
     {
-      "src": "/(.*)",
+      "src": "/(.*)\\.(png|jpg|svg|ico|css|js)",
       "dest": "/frontend/dist/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/dist/index.html"
     }
   ]
 }
