--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/app.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     },
     {
@@ -16,19 +16,19 @@
   "routes": [
     {
       "src": "/api/upload",
-      "dest": "/backend/app.py"
+      "dest": "/api/index.py"
+    },
+    {
+      "src": "/",
+      "dest": "/frontend/dist/index.html"
     },
     {
       "src": "/assets/(.*)",
       "dest": "/frontend/dist/assets/$1"
     },
     {
-      "src": "/(.*)\\.(png|jpg|svg|ico|css|js)",
-      "dest": "/frontend/dist/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/frontend/dist/index.html"
+      "dest": "/frontend/dist/$1"
     }
   ]
 }
